Fix: overflow and drag

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -4,6 +4,9 @@
 * {
 	user-select: none;
 }
+body {
+	overflow-x: hidden;
+}
 
 @layer base {
 	.dark {
